--- a/gui/src/layouts/Layout.astro
+++ b/gui/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Header from '../components/Header.astro';
 export interface Props {
 	title: string;
 }
@@ -11,10 +12,18 @@ const { title } = Astro.props as Props;
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/favicon.png" />
 	<title>{title}</title>
 </head>
 <body>
+  <style>
+	  body {
+      background-color: #d5d5d5;
+      background: linear-gradient(to top, #3d863d, #d5d5d5);
+      min-height: 100vh;
+    }
+  </style>
+  <Header/>
 	<slot />
 </body>
 </html>
