--- a/gui/src/layouts/Layout.astro
+++ b/gui/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+import Neutralino from '../components/Neutralino.astro';
 export interface Props {
 	title: string;
 }
@@ -16,11 +17,20 @@ const { title } = Astro.props as Props;
 	<title>{title}</title>
 </head>
 <body>
-  <style>
+  <Neutralino/>
+  <style type="scss" is:global>
 	  body {
       background-color: #d5d5d5;
       background: linear-gradient(to top, #3d863d, #d5d5d5);
       min-height: 100vh;
+    }
+    a, a * {
+      color: inherit;
+      text-decoration: none;
+    }
+    * {
+      margin: 0;
+      padding: 0;
     }
   </style>
   <Header/>
